tests/ui/unexpected_colon.stderr
error: unexpected token
 --> tests/ui/unexpected_colon.rs:4:21
  |
4 | type X = Cursor!(a. : bool);
  |                     ^
